[tool.poetry]
name = "vems"
version = "0.1.0"
description = "Sample Microgrid Energy Management System based on Vaidyuti Protocol."
authors = ["Rithvik Nishad <rithvikn2001@gmail.com>"]

[tool.poetry.dependencies]
python = "3.10.4"
Django = "4.0.5"
Pillow = "9.1.1"
PyYAML = "6.0"
black = "22.3.0"
celery = "5.2.7"
dj-database-url = "0.5.0"
dj-rest-auth = "2.2.4"
django-allauth = "0.50.0"
django-anymail = "8.6"
django-cors-headers = "3.13.0"
djangorestframework = "3.13.1"
factory-boy = "3.2.1"
gunicorn = "20.1.0"
python-dotenv = "0.20.0"
uritemplate = "4.1.1"
whitenoise = "6.2.0"
django-environ = "^0.9.0"
drf-yasg = "^1.20.0"
psycopg2 = "^2.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
